# solar_optim

./: .gitignore  pyproject.toml  setup.py  solar.py  solar_oop.py  solar_optim.ipynb
examples/: compare_strategies.py  compare_strategies_notebook.ipynb
src/solar_optimization/core/: __init__.py  consumption.py  production.py  scenarios.py  timeseries.py
src/solar_optimization/devices/: cet.py
src/solar_optimization/examples/: compare_strategies.py
src/solar_optimization/metrics/: calculator.py  models.py
src/solar_optimization/strategies/: __init__.py  base.py  max_solar.py  optimize.py  schedule.py  solar_only.py
src/solar_optimization/visualization/: plotter.py
