[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solar_optimization"
version = "0.1.0"
authors = [
    { name = "Romain", email = "romain.le-scouarnec@legrand.com" },
]
description = "Optimisation de la consommation d'énergie solaire pour CET"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]